--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,6 +37,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          submodules: recursive
 
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
@@ -62,6 +64,11 @@ jobs:
 
       - name: Install frontend dependencies
         run: npm ci
+
+      - name: Install Flux compiler dependencies
+        run: |
+          cd flux-compiler
+          npm ci
 
       - name: Build Tauri app
         uses: tauri-apps/tauri-action@v0
