--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,22 +15,15 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          # Linux
           - platform: ubuntu-22.04
             target: x86_64-unknown-linux-gnu
             name: linux-x64
-
-          # Windows
           - platform: windows-latest
             target: x86_64-pc-windows-msvc
             name: windows-x64
-
-          # macOS Intel
           - platform: macos-latest
             target: x86_64-apple-darwin
             name: macos-x64
-
-          # macOS Apple Silicon
           - platform: macos-latest
             target: aarch64-apple-darwin
             name: macos-arm64
@@ -53,7 +46,6 @@ jobs:
         with:
           node-version: 20
 
-      # Linux dependencies
       - name: Install Linux dependencies
         if: matrix.platform == 'ubuntu-22.04'
         run: |
@@ -74,35 +66,83 @@ jobs:
           npm ci
 
       - name: Build Tauri app
-        uses: tauri-apps/tauri-action@v0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tagName: ${{ github.ref_name }}
-          releaseName: 'FluxIDE ${{ github.ref_name }}'
-          releaseBody: |
-            ## Downloads
+        run: npm run tauri build -- --target ${{ matrix.target }}
 
-            | Platform | Download |
-            |----------|----------|
-            | Windows | `.exe` or `.msi` |
-            | macOS | `.dmg` |
-            | Linux | `.deb`, `.rpm`, or `.AppImage` |
-          releaseDraft: true
-          prerelease: false
-          includeUpdaterJson: false
-          args: --target ${{ matrix.target }}
-
-      - name: Upload artifacts
+      - name: Upload Linux artifacts
+        if: matrix.platform == 'ubuntu-22.04'
         uses: actions/upload-artifact@v4
         with:
-          name: fluxide-${{ matrix.name }}
+          name: linux-binaries
           path: |
             src-tauri/target/${{ matrix.target }}/release/bundle/deb/*.deb
-            src-tauri/target/${{ matrix.target }}/release/bundle/rpm/*.rpm
             src-tauri/target/${{ matrix.target }}/release/bundle/appimage/*.AppImage
+
+      - name: Upload Windows artifacts
+        if: matrix.platform == 'windows-latest'
+        uses: actions/upload-artifact@v4
+        with:
+          name: windows-binaries
+          path: |
             src-tauri/target/${{ matrix.target }}/release/bundle/msi/*.msi
             src-tauri/target/${{ matrix.target }}/release/bundle/nsis/*.exe
-            src-tauri/target/${{ matrix.target }}/release/bundle/dmg/*.dmg
-            src-tauri/target/${{ matrix.target }}/release/bundle/macos/*.app
-          if-no-files-found: ignore
+
+      - name: Upload macOS x64 artifacts
+        if: matrix.platform == 'macos-latest' && matrix.target == 'x86_64-apple-darwin'
+        uses: actions/upload-artifact@v4
+        with:
+          name: macos-x64-binaries
+          path: src-tauri/target/${{ matrix.target }}/release/bundle/dmg/*.dmg
+
+      - name: Upload macOS ARM artifacts
+        if: matrix.platform == 'macos-latest' && matrix.target == 'aarch64-apple-darwin'
+        uses: actions/upload-artifact@v4
+        with:
+          name: macos-arm64-binaries
+          path: src-tauri/target/${{ matrix.target }}/release/bundle/dmg/*.dmg
+
+  release:
+    needs: build
+    runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/')
+
+    steps:
+      - name: Download all artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: artifacts
+
+      - name: Display structure of downloaded files
+        run: ls -R artifacts
+
+      - name: Create Release
+        uses: softprops/action-gh-release@v1
+        with:
+          draft: true
+          name: FluxIDE ${{ github.ref_name }}
+          body: |
+            ## FluxIDE ${{ github.ref_name }}
+
+            A standalone IDE for the Flux programming language.
+
+            ### Downloads
+
+            | Platform | File |
+            |----------|------|
+            | **Windows** | `.exe` (installer) or `.msi` |
+            | **macOS Intel** | `*_x64.dmg` |
+            | **macOS Apple Silicon** | `*_aarch64.dmg` |
+            | **Linux** | `.deb` (Debian/Ubuntu) or `.AppImage` (universal) |
+
+            ### Installation
+
+            - **Windows**: Download and run the `.exe` installer
+            - **macOS**: Download the `.dmg`, open it, and drag FluxIDE to Applications
+            - **Linux**: Install with `sudo dpkg -i fluxide_*.deb` or run the AppImage directly
+          files: |
+            artifacts/**/*.deb
+            artifacts/**/*.AppImage
+            artifacts/**/*.msi
+            artifacts/**/*.exe
+            artifacts/**/*.dmg
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
