--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -68,37 +68,80 @@ jobs:
       - name: Build Tauri app
         run: npm run tauri build -- --target ${{ matrix.target }}
 
+      - name: Rename Linux artifacts
+        if: matrix.platform == 'ubuntu-22.04'
+        run: |
+          mkdir -p artifacts
+          cd src-tauri/target/${{ matrix.target }}/release/bundle
+          # Rename .deb (remove version)
+          for f in deb/*.deb; do
+            cp "$f" "$GITHUB_WORKSPACE/artifacts/fluxide_amd64.deb"
+          done
+          # Rename .AppImage (remove version)
+          for f in appimage/*.AppImage; do
+            cp "$f" "$GITHUB_WORKSPACE/artifacts/FluxIDE_amd64.AppImage"
+          done
+
       - name: Upload Linux artifacts
         if: matrix.platform == 'ubuntu-22.04'
         uses: actions/upload-artifact@v4
         with:
           name: linux-binaries
-          path: |
-            src-tauri/target/${{ matrix.target }}/release/bundle/deb/*.deb
-            src-tauri/target/${{ matrix.target }}/release/bundle/appimage/*.AppImage
+          path: artifacts/*
+
+      - name: Rename Windows artifacts
+        if: matrix.platform == 'windows-latest'
+        shell: bash
+        run: |
+          mkdir -p artifacts
+          cd src-tauri/target/${{ matrix.target }}/release/bundle
+          # Rename .msi
+          for f in msi/*.msi; do
+            cp "$f" "$GITHUB_WORKSPACE/artifacts/FluxIDE_x64.msi"
+          done
+          # Rename .exe
+          for f in nsis/*.exe; do
+            cp "$f" "$GITHUB_WORKSPACE/artifacts/FluxIDE_x64-setup.exe"
+          done
 
       - name: Upload Windows artifacts
         if: matrix.platform == 'windows-latest'
         uses: actions/upload-artifact@v4
         with:
           name: windows-binaries
-          path: |
-            src-tauri/target/${{ matrix.target }}/release/bundle/msi/*.msi
-            src-tauri/target/${{ matrix.target }}/release/bundle/nsis/*.exe
+          path: artifacts/*
+
+      - name: Rename macOS x64 artifacts
+        if: matrix.platform == 'macos-latest' && matrix.target == 'x86_64-apple-darwin'
+        run: |
+          mkdir -p artifacts
+          cd src-tauri/target/${{ matrix.target }}/release/bundle
+          for f in dmg/*.dmg; do
+            cp "$f" "$GITHUB_WORKSPACE/artifacts/FluxIDE_x64.dmg"
+          done
 
       - name: Upload macOS x64 artifacts
         if: matrix.platform == 'macos-latest' && matrix.target == 'x86_64-apple-darwin'
         uses: actions/upload-artifact@v4
         with:
           name: macos-x64-binaries
-          path: src-tauri/target/${{ matrix.target }}/release/bundle/dmg/*.dmg
+          path: artifacts/*
+
+      - name: Rename macOS ARM artifacts
+        if: matrix.platform == 'macos-latest' && matrix.target == 'aarch64-apple-darwin'
+        run: |
+          mkdir -p artifacts
+          cd src-tauri/target/${{ matrix.target }}/release/bundle
+          for f in dmg/*.dmg; do
+            cp "$f" "$GITHUB_WORKSPACE/artifacts/FluxIDE_aarch64.dmg"
+          done
 
       - name: Upload macOS ARM artifacts
         if: matrix.platform == 'macos-latest' && matrix.target == 'aarch64-apple-darwin'
         uses: actions/upload-artifact@v4
         with:
           name: macos-arm64-binaries
-          path: src-tauri/target/${{ matrix.target }}/release/bundle/dmg/*.dmg
+          path: artifacts/*
 
   release:
     needs: build
